# tcorp_math_mods

./: Cargo.toml  README.md
src/factors/: mod.rs
tests/: factors.rs
