[package]
name = "tcorp_math_mods"
version = "0.1.0"
authors = ["Tyrel Richey <tyrel@tycorp.org>"]

homepage = "https://github.com/thetyrelcorporation/tcorp_math_mods"
repository = "https://github.com/thetyrelcorporation/tcorp_math_mods"

license = "MIT/Apache-2.0"
keywords = ["math", "mathematics", "number-theory"]
readme = "README.md"

description = "This will be a growing collection of helpful math functions and algorythems all of which will be abstracted into generic types."

[dependencies]
num = "0.1.27"
